[package]
name = "hutao-minhook-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
min_hook_rs = "2.1"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Environment",
    "Win32_System_Memory",
    "Win32_System_Kernel",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_Storage",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
] }

[profile.release]
panic = "abort"
lto = true

[lib]
name = "hutao_minhoo_ng"
crate-type = ["cdylib"]