[package]
name = "hutao-minhook-ng"
version = "0.1.0"
edition = "2024"

[dependencies]
min_hook_rs = "2.1.1"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

[profile.release]
panic = "abort"
lto = true

[lib]
name = "hutao_minhook_ng"
crate-type = ["cdylib"]